2017-11-29

	* libsylph/libsylph-0.def
	  libsylph/utils.[ch]: added strconcat_csv() which concaternates strings
	  and outputs as a CSV string.
	* src/Makefile.am
	  src/addressbook.c
	  src/exportcsv.[ch]: implemented CSV export feature.

2017-11-24

	* libsylph/prefs_common.[ch]
	  src/addressbook.c: added 'Nick Name' column to the address book.

2017-11-22

	* src/query_search.c: fixed folder selection dialog for copy.

2017-11-21

	* src/query_search.c: added context menu for search result.

2017-11-17

	* libsylph/procmime.c:
	  procmime_get_encoding_for_text_file()
	  procmime_get_encoding_for_str(): count 0x00 and 0x7f as
	  encode-required octet characters.

2017-11-17

	* src/compose.c: refactored UTF-16 support.
	* libsylph/codeconv.c: conv_copy_file(): supported
	  UTF-16/UTF-16BE/UTF-16LE.
	* libsylph/codeconv.c: conv_copy_file_with_gconvert(): added missing
	  GError NULL initialization.

2017-11-16

	* src/compose.c: compose_insert_file(): supported insertion of
	  UTF-16/UTF-16BE/UTF-16LE text.

2017-11-16

	* libsylph/codeconv.[ch]: conv_check_file_encoding(): added detection
	  of UTF-16/UTF-16BE/UTF-16LE.
	* src/compose.c: automatically convert attached UTF-16 text file to
	  UTF-8 on sending.

2017-11-15

	* src/printing.c: use GTK_UNIT_PIXEL instead of GTK_UNIT_POINTS
	  to avoid text corruption bug.
	  Fixed printing of empty lines.

2017-07-07

	* plugin/test/test.c: made app_exit_handler_id static to prevent conflicts
	  of symbols.

2017-06-28

	* version 3.6.0

2017-06-28

	* manual/ja/sylpheed.sgml: updated.

2017-06-12

	* version 3.6.0beta1

2017-06-12

	* src/printing.c: disable save/load of printing settings on
	  GTK+ <= 2.10.

2017-06-09

	* src/printing.c: save/load printing settings and page setup.

2017-03-22

	* src/about.c
	  src/sylpheed.rc.in: updated copyright year.

2017-02-28

	* manual/ja/sylpheed.sgml: updated.

2017-02-24

	+ libsylph/libsylph-0.def: export procmime_scan_message_stream.

2017-02-20
