@@ -1,3 +1,9 @@
+2017-11-30
+
+	* libsylph/utils.c: strconcat_csv(): enclose fields in double quotes
+	  if double quotes appear.
+	* src/exportcsv.c: code cleanup. Added header line.
+
 2017-11-29
 
 	* libsylph/libsylph-0.def
